# msc-viterbo

./: .gitattributes  .gitignore  .ignore  AGENTS.md  ARCHAEOLOGY.md  CLAUDE.md  CLEANUP_BILLIARD_TASK.md  README.md  ROADMAP.md  TODO.md  index.html  msc-viterbo.code-workspace  onboarding.md  setup.sh  thesis.code-workspace
.cargo/: config.toml
.claude/: CATEGORIZATION_PROPOSAL.md  CLAUDE.md  DEBUGGING.md  KNOWLEDGE_INVENTORY.md  READY_FOR_REVIEW.md  SKILLS_IMPLEMENTATION_SUMMARY.md  SKILL_HEADERS_REVIEW.md  settings.json  settings.minimal.json  settings.with-hook-fixed.json
.devcontainer/: CLAUDE.md  Dockerfile  README.md  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
agent_docs/: add-git-worktree.md  develop-devops-scripts.md  develop-lean.md  develop-python.md  develop-rust.md  latexml-troubleshooting.md  maintain-environment-caches.md  maintain-environment.md  maintain-git-worktrees.md  write-agent_docs.md  write-gh-issues-prs.md  write-latex.md  write-thesis.md
crates/: CLAUDE.md  Cargo.toml
crates/ffi/: Cargo.toml  pyproject.toml
crates/ffi/src/: lib.rs
crates/geom4d/: Cargo.toml
crates/geom4d/src/: bounded_crosscheck_tests.rs  bounded_tests.rs  hrep.rs  tolerances.rs
docs/: 01-research-question.md  02-algorithms-overview.md  03-data-science-experiments.md  04-thesis-and-ai-agents.md  05-literature-overview.md  ARCHIVE.md  CLAUDE.md  README.md  architecture.md  todo.md  (+7 more)
experiments/: CLAUDE.md  conftest.py  pyproject.toml  pyrightconfig.json
experiments/_example/: README.md  SPEC.md  __init__.py  stage_1.py  stage_2.py  test_stage_1.py  test_stage_2.py
experiments/algorithm_comparison/: SPEC.md  __init__.py  stage_build.py
experiments/algorithm_inventory/: FINDINGS.md  stage_build.py  stage_tabulate.py
experiments/benchmark_hk2017/: SPEC.md  stage_build.py  stage_plot.py
experiments/counterexample_hko/: SPEC.md  stage_build.py  stage_plot.py
experiments/example_pipeline/: SPEC.md  __init__.py  stage_analyze.py  stage_plot.py
experiments/polytope_database/: SPEC.md  __init__.py  stage_capacity.py  stage_volume.py
experiments/polytope_visualization_4d/: stage_build.py
experiments/runtime_performance_analysis/: SPEC.md  stage_analyze.py  stage_build.py  stage_tabulate.py
(+9471 files in other folders)
