[project]
name = "experiments"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "plotly>=5.24",
    "matplotlib>=3.9",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=2.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = ["pytest", "pyright", "ruff", "maturin", "scipy-stubs", "pandas-stubs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pyright]
# Exclude blocked experiments with stale imports from old viterbo package structure.
# These experiments are blocked on FFI and other dependencies anyway.
# Only _example (reference implementation) is actively type-checked.
exclude = [
    "algorithm_comparison",
    "algorithm_inventory",
    "benchmark_hk2017",
    "counterexample_hko",
    "example_pipeline",
    "polytope_database",
    "polytope_visualization_4d",
    "runtime_performance_analysis",
]
