[project]
name = "experiments"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "plotly>=5.24",
    "matplotlib>=3.9",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=2.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = ["pytest", "pyright", "ruff", "maturin", "scipy-stubs", "pandas-stubs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

# Pyright config in pyrightconfig.json (JSON format required for venvPath)
