[package]
name = "geom4d"
version = "0.1.0"
description = "4D convex geometry primitives for symplectic capacity algorithms"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nalgebra = "0.33"
thiserror = "2"
minilp = "0.2"

[dev-dependencies]
approx = "0.5"
proptest = "1"
